Modified the simulation process. Software now includes the simulation of continuous outcomes associated with gene expression.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: hierarchicell
-Title: Simulating Compositional, Cell-Type Specific, and Hierarchical scRNA-seq data
+Title: Simulating cell-type specific and hierarchical scRNA-seq data
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Kip",
@@ -8,16 +8,17 @@ Authors@R:
            email = "kdzimmer@wakehealth.edu",
            comment = c(ORCID = "0000-0002-2943-6612"))
 Description: The hierarchicell package estimates important parameters from single-cell
-    RNA-seq expression counts before simulating expression data that is
-    compositional, cell-type specific, and hierarchical in nature. With the
-    simulated data, hierarchicell is then able to compute power calculations
-    under a variety of conditions. The package consists of four important
-    categories of functions: data loading and cleaning, empirical estimation of
-    distributions, simulating expression data, and computing power.
+    RNA-seq expression counts before simulating expression data that is cell-type 
+    specific and hierarchical in nature. With the simulated data, hierarchicell 
+    is then able to compute power calculations under a variety of conditions. 
+    The package consists of four important categories of functions: data loading 
+    and cleaning, empirical estimation of distributions, simulating expression 
+    data, and computing power or type 1 error.
+Depends: R (>= 3.4.0)
 License: CC0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Imports: 
     fitdistrplus,
     ggplot2,
@@ -41,4 +42,4 @@ Imports:
     stats,
     methods,
     grDevices,
-    growthcurver
+    DESeq2
